fixing content-overflow

--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	overflow: visible;
-	position: relative;
+	overflow: hidden;
 }
 
 div#angle {
